--- a/fasum/pubspec.yaml
+++ b/fasum/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   intl: ^0.20.2
   cupertino_icons: ^1.0.8
   flutter_launcher_icons: ^0.14.3
+  url_launcher: ^6.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -31,7 +32,6 @@ flutter_launcher_icons:
   
 flutter:
   uses-material-design: true
-
-assets:
+  assets:
   - assets/fasum_icon.png
   - assets/fasum_icon_512.png
