--- a/fasum/pubspec.yaml
+++ b/fasum/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   provider: ^6.1.5
   flutter_localizations:
     sdk: flutter
+  flutter_gen: ^5.10.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
